--- a/src/components/DiscountForm/DiscountForm.css
+++ b/src/components/DiscountForm/DiscountForm.css
@@ -1,7 +1,14 @@
+.discount-form-container {
+    margin-top: 8px;
+}
+
 .discount-form {
     max-width: 500px;
-    margin: 0 auto;
     padding: 20px;
+}
+
+.DiscountForm .me-auto {
+    color: #FF5733;
 }
 
 .discount-form div {
@@ -10,7 +17,6 @@
 
 .discount-form {
     max-width: 500px;
-    margin: 0 auto;
     padding: 20px;
 }
 
@@ -36,16 +42,18 @@
 }
 
 .submit-button {
-    background-color: #007bff;
+    background-color: black;
     color: white;
-    padding: 10px 15px;
+    padding: 10px 20px;
+    font-size: 1.1rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 .submit-button:hover {
-    background-color: #0056b3;
+    background-color: #FF5733;
 }
 
 .custom-toast {
