--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -50,6 +50,11 @@
     color: #fff;
 }
 
+.product-new-button:hover:focus {
+    background-color: #2c2c2c;
+    color: #fff;
+}
+
 .product-new-button i {
     transition: transform 0.3s ease;
 }
